cache class loader